[package]
name = "tropical_algebra"
description = "Implementation of the tropical algebra in Rust."
repository = "https://github.com/MeetThePatel/Tropical-Algebra"
homepage = "https://github.com/MeetThePatel/Tropical-Algebra"
version = "0.0.3"
edition = "2021"
license = "MIT"
exclude = ["/src/bin"]

[dependencies]
num-traits = "0.2.15"
ndarray = "0.15.4"