[package]
name = "tropical_algebra"
description = "Implementation of the tropical algebra in Rust."
repository = "https://github.com/MeetThePatel/Tropical-Algebra"
documentation = "https://docs.rs/tropical_algebra/0.0.2/tropical_algebra/"
homepage = "https://github.com/MeetThePatel/Tropical-Algebra"
version = "0.0.4"
edition = "2021"
license = "MIT"
exclude = ["/src/bin"]

[dependencies]
auto_ops = "0.3.0"
ndarray = "0.15.4"
num-traits = "0.2.15"
